Создано с помощью Colaboratory

--- a/1_credit_bank.ipynb
+++ b/1_credit_bank.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "# Исследование надёжности заёмщиков\n",
-        "\n",
+        "### Описание и цели\n",
         "Заказчик — кредитный отдел банка. Нужно разобраться, влияет ли семейное положение и количество детей клиента на факт погашения кредита в срок. Входные данные от банка — статистика о платёжеспособности клиентов.\n",
         "\n",
         "Результаты исследования будут учтены при построении модели **кредитного скоринга** — специальной системы, которая оценивает способность потенциального заёмщика вернуть кредит банку."
@@ -15,12 +15,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "sOZgq6FJUWRX"
-      },
       "source": [
-        "## Шаг 1. Откройте файл с данными и изучите общую информацию"
-      ]
+        "## 1. Импорт данных"
+      ],
+      "metadata": {
+        "id": "3g2JPHfcdiaK"
+      }
     },
     {
       "cell_type": "code",
@@ -424,7 +424,7 @@
         "id": "2d716guIUWRm"
       },
       "source": [
-        "## Шаг 2. Предобработка данных"
+        "## 2. Предобработка данных"
       ]
     },
     {
@@ -1942,7 +1942,7 @@
         "id": "13nweyUCUWSH"
       },
       "source": [
-        "## Шаг 3. Ответьте на вопросы"
+        "## 3. Исследование и выводы"
       ]
     },
     {
@@ -2463,7 +2463,7 @@
         "id": "nGsMciNjUWSP"
       },
       "source": [
-        "## Шаг 4. Общий вывод"
+        "## 4. Выводы"
       ]
     },
     {
@@ -7574,9 +7574,14 @@
       "toc_window_display": false
     },
     "colab": {
-      "name": "1. credit_bank.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "tIl0iSrrUWRm",
+        "QrLqf9-nUWRx",
+        "bH-B9RoeUWR1",
+        "unxCpU6-UWR7",
+        "CJWj8LotUWSA"
+      ]
     }
   },
   "nbformat": 4,
