Создано с помощью Colaboratory

--- a/2_sales_appartment.ipynb
+++ b/2_sales_appartment.ipynb
@@ -3,12 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "toc": true,
-        "id": "LmVDYnK-aPCI"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<h1>Содержание<span class=\"tocSkip\"></span></h1>\n",
-        "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Изучение-данных-из-файла\" data-toc-modified-id=\"Изучение-данных-из-файла-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Изучение данных из файла</a></span><ul class=\"toc-item\"><li><span><a href=\"#Вывод\" data-toc-modified-id=\"Вывод-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Вывод</a></span></li></ul></li><li><span><a href=\"#Предобработка-данных\" data-toc-modified-id=\"Предобработка-данных-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Предобработка данных</a></span><ul class=\"toc-item\"><li><span><a href=\"#Приведем-данные-в-столбцах-к-нужным-типам\" data-toc-modified-id=\"Приведем-данные-в-столбцах-к-нужным-типам-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Приведем данные в столбцах к нужным типам</a></span></li></ul></li><li><span><a href=\"#Расчёты-и-добавление-результатов-в-таблицу\" data-toc-modified-id=\"Расчёты-и-добавление-результатов-в-таблицу-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Расчёты и добавление результатов в таблицу</a></span></li><li><span><a href=\"#Исследовательский-анализ-данных\" data-toc-modified-id=\"Исследовательский-анализ-данных-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Исследовательский анализ данных</a></span><ul class=\"toc-item\"><li><span><a href=\"#Факторы-влияющие-на-стоимость-квартиры.\" data-toc-modified-id=\"Факторы-влияющие-на-стоимость-квартиры.-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Факторы влияющие на стоимость квартиры.</a></span></li><li><span><a href=\"#Топ-10-населенных-пунктов-по-количеству-объявлений\" data-toc-modified-id=\"Топ-10-населенных-пунктов-по-количеству-объявлений-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Топ 10 населенных пунктов по количеству объявлений</a></span></li><li><span><a href=\"#Квартиры-Санкт-Петербурга\" data-toc-modified-id=\"Квартиры-Санкт-Петербурга-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Квартиры Санкт-Петербурга</a></span></li></ul></li><li><span><a href=\"#Общий-вывод\" data-toc-modified-id=\"Общий-вывод-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Общий вывод</a></span></li><li><span><a href=\"#Чек-лист-готовности-проекта\" data-toc-modified-id=\"Чек-лист-готовности-проекта-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Чек-лист готовности проекта</a></span></li></ul></div>"
+        "<a href=\"https://colab.research.google.com/github/alexOdin18/Yandex_Practicum/blob/main/2_sales_appartment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -18,9 +17,10 @@
       },
       "source": [
         "# Исследование объявлений о продаже квартир\n",
+        "### Описание и цели\n",
+        "Cервис Яндекс.Недвижимость — провести анализ архива объявлений о продаже квартир в Санкт-Петербурге и соседних населённых пунктах за несколько лет. Определить рыночную стоимость объектов недвижимости. Задача — установить корреляцию между параметрами квартиры и ее рыночной стоимости. Оцинить вклад этих признаков в стоимость квартиры.\n",
         "\n",
-        "В вашем распоряжении данные сервиса Яндекс.Недвижимость — архив объявлений о продаже квартир в Санкт-Петербурге и соседних населённых пунктах за несколько лет. Нужно научиться определять рыночную стоимость объектов недвижимости. Ваша задача — установить параметры. Это позволит построить автоматизированную систему: она отследит аномалии и мошенническую деятельность. \n",
-        "\n",
+        "**Данные:**  \n",
         "По каждой квартире на продажу доступны два вида данных. Первые вписаны пользователем, вторые получены автоматически на основе картографических данных. Например, расстояние до центра, аэропорта, ближайшего парка и водоёма. "
       ]
     },
@@ -30,7 +30,7 @@
         "id": "XXzYZ76BaPCK"
       },
       "source": [
-        "## Изучение данных из файла"
+        "## 1. Импорт данных"
       ]
     },
     {
@@ -709,7 +709,7 @@
         "id": "UzZenUFdaPCU"
       },
       "source": [
-        "## Предобработка данных"
+        "## 2. Предобработка данных"
       ]
     },
     {
@@ -1173,15 +1173,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "f4zrSvrhaPCg"
-      },
-      "source": [
-        "### Приведем данные в столбцах к нужным типам"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "zu1dOJgmaPCh"
       },
       "source": [
@@ -1302,7 +1293,7 @@
         "id": "brMtb6TraPCk"
       },
       "source": [
-        "## Расчёты и добавление результатов в таблицу"
+        "## 3. Исследование"
       ]
     },
     {
@@ -1702,15 +1693,6 @@
       ],
       "source": [
         "df.sample(5)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PNaMYpywaPCp"
-      },
-      "source": [
-        "## Исследовательский анализ данных"
       ]
     },
     {
@@ -3556,7 +3538,7 @@
         "id": "qwaoLC5GaPDQ"
       },
       "source": [
-        "## Общий вывод"
+        "## 4. Выводы"
       ]
     },
     {
@@ -18158,9 +18140,9 @@
       "toc_window_display": false
     },
     "colab": {
-      "name": "2.sales_appartment.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
