Создано с помощью Colaboratory

--- a/4_ecom_project.ipynb
+++ b/4_ecom_project.ipynb
@@ -3,10 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8CC5C6tEdy1q"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "# Сборный проект №1"
+        "<a href=\"https://colab.research.google.com/github/alexOdin18/Yandex_Practicum/blob/main/4_ecom_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -15,7 +16,7 @@
         "id": "NOTEKZGMdy1r"
       },
       "source": [
-        "# Описание проекта: "
+        "# Описание и цели проекта "
       ]
     },
     {
@@ -24,8 +25,10 @@
         "id": "g-vy6dnfdy1s"
       },
       "source": [
-        "Вы работаете в интернет-магазине «Стримчик», который продаёт по всему миру компьютерные игры. Из открытых источников доступны исторические данные о продажах игр, оценки пользователей и экспертов, жанры и платформы (например, Xbox или PlayStation). Вам нужно выявить определяющие успешность игры закономерности. Это позволит сделать ставку на потенциально популярный продукт и спланировать рекламные кампании.\n",
-        "Перед вами данные до 2016 года. Представим, что сейчас декабрь 2016 г., и вы планируете кампанию на 2017-й. Нужно отработать принцип работы с данными. Неважно, прогнозируете ли вы продажи на 2017 год по данным 2016-го или же 2027-й — по данным 2026 года.\n",
+        "Компания - интернет-магазин «Стримчик», который продаёт по всему миру компьютерные игры. Из открытых источников доступны исторические данные о продажах игр, оценки пользователей и экспертов, жанры и платформы (например, Xbox или PlayStation). Нужно выявить **определяющие успешность игры закономерности**. Это позволит сделать ставку на потенциально популярный продукт и спланировать рекламные кампании.\n",
+        "На исследовнаие предоставлены данные до 2016 года. Нужно предоставить критерии успешности игр для закупки на 2017 год.\n",
+        "\n",
+        "*Примечание*  \n",
         "В наборе данных попадается аббревиатура ESRB (Entertainment Software Rating Board) — это ассоциация, определяющая возрастной рейтинг компьютерных игр. ESRB оценивает игровой контент и присваивает ему подходящую возрастную категорию, например, «Для взрослых», «Для детей младшего возраста» или «Для подростков»."
       ]
     },
@@ -41,19 +44,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4Pc-iPskdy1u"
-      },
-      "source": [
-        "Так как мы работаем в интернет-магазине, то для нас \"успешность\" определяется прежде всего объемом продаж. <p> Влияют ли оценки пользователей, экспертов, жанр игры и платформа на объем продаж игры ? Если влияют, то насколько сильно и в какой зависимости ? На эти вопросы нужно будет дать ответы."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "-2DfUr9Idy1x"
       },
       "source": [
-        "## Импорт данных. Первый взгляд."
+        "## 1. Импорт данных. Предварительный анализ."
       ]
     },
     {
@@ -533,7 +527,7 @@
         "id": "o30UTs6qdy19"
       },
       "source": [
-        "## Подготовка данных"
+        "## 2. Предобработка данных"
       ]
     },
     {
@@ -1223,7 +1217,7 @@
         "id": "tknXgqPYdy2L"
       },
       "source": [
-        "## Исследовательский анализ"
+        "## 3. Исследовательский анализ"
       ]
     },
     {
@@ -3899,7 +3893,7 @@
         "id": "Zf_96TLUdy2z"
       },
       "source": [
-        "## Выводы"
+        "## 4. Выводы"
       ]
     },
     {
@@ -11350,9 +11344,9 @@
       "toc_window_display": true
     },
     "colab": {
-      "name": "4. ecom project.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
