Создано с помощью Colaboratory

--- a/11_maching_learning.ipynb
+++ b/11_maching_learning.ipynb
@@ -2,11 +2,31 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "# Описание и цели проекта\n",
+        "Сеть фитнес-центров «Культурист-датасаентист» разрабатывает стратегию взаимодействия с клиентами на основе аналитических данных.\n",
+        "Распространённая проблема фитнес-клубов и других сервисов — отток клиентов. \n",
+        "\n",
+        "**Цели проекта:**  \n",
+        "- Провести ad hoc исследование вероятных причин оттока клиентов.\n",
+        "- Найти корреляцию поведенческих признаков с вероятным оттоком клиента. - Построить предиктивную модель для прогнозирования оттока (на уровне следующего месяца) для каждого клиента.\n",
+        "\n",
+        "**Задачи:**  \n",
+        "- Сформировать типичные портреты клиентов: выделить несколько наиболее ярких групп и охарактеризовать их основные свойства;\n",
+        "- Проанализировать основные признаки, наиболее сильно влияющие на отток;\n",
+        "- Сформулировать основные выводы и разработать рекомендации по повышению качества работы с клиентами."
+      ],
+      "metadata": {
+        "id": "K8jRwoUyS2iy"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "hLfaofCmm465"
       },
       "source": [
-        "## Загрузка данных. Первый взгляд."
+        "## 1. Загрузка данных. Предварительный анализ."
       ]
     },
     {
@@ -301,7 +321,7 @@
         "id": "Mhd9-y2Bm47E"
       },
       "source": [
-        "## Исследовательский анализ данных (EDA)"
+        "## 2. Исследовательский анализ данных (EDA)"
       ]
     },
     {
@@ -1845,7 +1865,7 @@
         "id": "3KSlGCz-m47j"
       },
       "source": [
-        "## Выводы и  рекомендации"
+        "## 3. Выводы и  рекомендации"
       ]
     },
     {
@@ -3186,7 +3206,6 @@
       "toc_window_display": false
     },
     "colab": {
-      "name": "11. maching learning.ipynb",
       "provenance": [],
       "collapsed_sections": []
     }
