--- a/12_ecom_final_project.ipynb
+++ b/12_ecom_final_project.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/alexOdin18/Yandex_Practicum/blob/main/12_ecom_final_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "5Dx5fcoZqpJx"
       },
       "source": [
@@ -58,7 +68,7 @@
         "id": "CqpoL53uqpJ1"
       },
       "source": [
-        "## Загрузка данных. Первый взгляд."
+        "## 1. Загрузка данных. Предварительный анализ."
       ]
     },
     {
@@ -323,7 +333,7 @@
         "id": "5s68-MUQqpJ_"
       },
       "source": [
-        "## Предобработка данных"
+        "## 2. Предобработка данных"
       ]
     },
     {
@@ -575,7 +585,7 @@
         "id": "PrBWX55-qpKD"
       },
       "source": [
-        "## Исследовательский анализ данных"
+        "## 3. Исследовательский анализ данных"
       ]
     },
     {
@@ -4830,7 +4840,7 @@
         "id": "aVAZ7yF_qpK3"
       },
       "source": [
-        "## Выводы"
+        "## 4. Выводы"
       ]
     },
     {
@@ -19067,9 +19077,10 @@
       "toc_window_display": true
     },
     "colab": {
-      "name": "12. ecom final project.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
