--- a/6_product_analyst.ipynb
+++ b/6_product_analyst.ipynb
@@ -7,76 +7,13 @@
         "id": "A1S1-v2-gkGF"
       },
       "source": [
-        "### Инструкция по выполнению проекта:\n",
+        "# Описание и цели проекта:\n",
         "\n",
-        "Вы - маркетинговый аналитик развлекательного приложения Procrastinate Pro+. Несколько прошлых месяцев ваш бизнес постоянно нес убытки - в привлечение пользователей была вложена куча денег, а толку никакого. Вам нужно разобраться в причинах этой ситуации.\n",
+        "Продуктовая аналитика приложения Procrastinate Pro+. Затраты на привлечение пользователей не окупаются. Провести исследование поведения пользователей за период. Выяснить какие факторы отрицательно влияют на конверсию в покупку. Провести когортный анализ. Рассчитать LTV, ROI, Retention. Оценить окупаемость рекламы.  \n",
+        "**Данные:**  \n",
+        "Логи сервера с данными о посещениях приложения новыми пользователями, зарегистрировавшимися в период с 2019-05-01 по 2019-10-27, выгрузка их покупок за этот период, а также статистика рекламных расходов.\n",
         "\n",
-        "У вас в распоряжении есть лог сервера с данными о посещениях приложения новыми пользователями, зарегистрировавшимися в период с 2019-05-01 по 2019-10-27, выгрузка их покупок за этот период, а также статистика рекламных расходов. Вам предстоит изучить, как люди пользуются продуктом, когда они начинают покупать, сколько денег приносит каждый клиент, когда он окупается и какие факторы отричательно влияют на привлечение пользователей.\n",
-        "\n",
-        "#### Шаг 1. Загрузите данные и подготовьте их к анализу\n",
-        "Загрузите данные о визитах, заказах и расходах в переменные. Оптимизируйте данные для анализа. Убедитесь, что тип данных в каждой колонке — правильный. Путь к файлам:\n",
-        "\n",
-        " -   /datasets/visits_info.csv\n",
-        " -   /datasets/orders_info.csv\n",
-        " -   /datasets/costs_info.csv\n",
-        "\n",
-        "#### Шаг 2. Проведите исследовательский анализ данных\n",
-        "\n",
-        "Постройте профили пользователей. Определите минимальную и максимальную дату привлечения пользователей.\n",
-        "\n",
-        "Выясните:\n",
-        "- Из каких стран приходят посетители? Какие страны дают больше всего платящих пользователей?\n",
-        "- Какими устройствами они пользуются? С каких устройств чаще всего заходят платящие пользователи?\n",
-        "- По каким рекламным каналам шло привлечение пользователей? Какие каналы приносят больше всего платящих пользователей?\n",
-        "\n",
-        "#### Шаг 3. Постройте отчёты и посчитайте метрики\n",
-        "Продукт:\n",
-        "\n",
-        "-    Сколько людей пользуются в день, неделю, месяц?\n",
-        "-    Сколько сессий в день?\n",
-        "-    Сколько длится одна сессия?\n",
-        "\n",
-        "Продажи:\n",
-        "\n",
-        "- Когда люди начинают покупать?\n",
-        "- Сколько покупок делает в среднем платящий пользователь за месяц, неделю, день?\n",
-        "- Какой средний чек за месяц, неделю, день?\n",
-        "\n",
-        "Маркетинг:\n",
-        "\n",
-        "- Сколько денег потратили? Всего / на каждый источник / по времени\n",
-        "- Сколько в среднем стоило привлечение одного покупателя из каждого источника?\n",
-        "\n",
-        "#### Шаг 4. Задайте функции для расчета и анализа LTV, ROI, удержания и конверсии\n",
-        "\n",
-        "Разрешается использовать функции, с которыми вы познакомились в теоретических уроках.\n",
-        "\n",
-        "#### Шаг 5. Оцените окупаемость рекламы для привлечения пользователей\n",
-        "\n",
-        "С помощью LTV и ROI:\n",
-        "- Проанализируйте общую окупаемость рекламы;\n",
-        "- Проанализируйте окупаемость рекламы с разбивкой по устройствам;\n",
-        "- Проанализируйте окупаемость рекламы с разбивкой по странам;\n",
-        "- Проанализируйте окупаемость рекламы с разбивкой по рекламным каналам.\n",
-        "\n",
-        "Опишите проблемы, которые вы обнаружили. Ответьте на вопросы:\n",
-        "- Окупается ли реклама, направленная на привлечение пользователей в целом? \n",
-        "- Какие устройства, страны и рекламные каналы могут оказывать негативное влияние на окупаемость рекламы?\n",
-        "- Чем могут быть вызваны проблемы окупаемости? Изучите конверсию и удержание с разбивкой по устройствам, странам, рекламным каналам.\n",
-        "\n",
-        "Опишите возможные причины обнаруженных проблем и сформируйте рекомендации для рекламного отдела. При решении этого шага считайте, что вы смотрите данные 1-го ноября 2019 года и что в вашей организации принято считать, что окупаемость должна наступать не позднее, чем через 2 недели после привлечения пользователей.\n",
-        "\n",
-        "Подумайте, нужно ли включать в анализ органических пользователей?\n",
-        "\n",
-        "#### Шаг 6. Напишите выводы\n",
-        "- Выделите причины неэффективности привлечения пользователей;\n",
-        "- Сформируйте рекомендации для отдела маркетинга для повышения эффективности.\n",
-        "\n",
-        "#### Оформление: \n",
-        "Задание выполните в Jupyter Notebook. Программный код заполните в ячейках типа code, текстовые пояснения — в ячейках типа markdown. Примените форматирование и заголовки.\n",
-        "\n",
-        "\n",
-        "#### Описание данных\n",
+        "### Описание данных\n",
         "Таблица visits (лог сервера с информацией о посещениях сайта):\n",
         "\n",
         "    User Id — уникальный идентификатор пользователя\n",
@@ -106,12 +43,7 @@
         "id": "gU-5OL1kgkGI"
       },
       "source": [
-        "# Шаг 1. Загрузите данные и подготовьте их к анализу\n",
-        "Загрузите данные о визитах, заказах и расходах в переменные. Оптимизируйте данные для анализа. Убедитесь, что тип данных в каждой колонке — правильный. Путь к файлам:\n",
-        "\n",
-        " -   /datasets/visits_info.csv\n",
-        " -   /datasets/orders_info.csv\n",
-        " -   /datasets/costs_info.csv"
+        "# 1. Загрузка данных. Предварительный анализ."
       ]
     },
     {
@@ -875,11 +807,11 @@
         "id": "6WF3JbgmgkGb"
       },
       "source": [
-        "# Шаг 2. Проведите исследовательский анализ данных\n",
+        "# 2. Исследовательский анализ данных\n",
         "\n",
-        "Постройте профили пользователей. Определите минимальную и максимальную дату привлечения пользователей.\n",
+        "Построем профили пользователей. Определим минимальную и максимальную дату привлечения пользователей.\n",
         "\n",
-        "Выясните:\n",
+        "Также ответим на следующие вопросы:\n",
         "- Из каких стран приходят посетители? Какие страны дают больше всего платящих пользователей?\n",
         "- Какими устройствами они пользуются? С каких устройств чаще всего заходят платящие пользователи?\n",
         "- По каким рекламным каналам шло привлечение пользователей? Какие каналы приносят больше всего платящих пользователей?"
@@ -1461,7 +1393,7 @@
         "id": "zUYfrEeXgkGk"
       },
       "source": [
-        "# Шаг 3. Постройте отчёты и посчитайте метрики\n",
+        "# 3. Рассчет продуктовых метрик\n",
         "Продукт:\n",
         "\n",
         "-    Сколько людей пользуются в день, неделю, месяц?\n",
@@ -3039,9 +2971,7 @@
         "id": "EWos07gZgkG2"
       },
       "source": [
-        "# Шаг 4. Задайте функции для расчета и анализа LTV, ROI, удержания и конверсии\n",
-        "\n",
-        "Разрешается использовать функции, с которыми вы познакомились в теоретических уроках."
+        "# Расчет и анализа LTV, ROI, удержания и конверсий\n"
       ]
     },
     {
@@ -3324,9 +3254,7 @@
         "id": "A7AJOt-3gkG5"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -3830,34 +3758,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "cellId": "7jeivexb34hisfbjw40qt",
-        "id": "Ma1xJ21ggkG_"
-      },
-      "source": [
-        "# Шаг 5. Оцените окупаемость рекламы для привлечения пользователей\n",
-        "\n",
-        "С помощью LTV и ROI:\n",
-        "- Проанализируйте общую окупаемость рекламы;\n",
-        "- Проанализируйте окупаемость рекламы с разбивкой по устройствам;\n",
-        "- Проанализируйте окупаемость рекламы с разбивкой по странам;\n",
-        "- Проанализируйте окупаемость рекламы с разбивкой по рекламным каналам.\n",
-        "\n",
-        "Опишите проблемы, которые вы обнаружили. Ответьте на вопросы:\n",
-        "- Окупается ли реклама, направленная на привлечение пользователей в целом? \n",
-        "- Какие устройства, страны и рекламные каналы могут оказывать негативное влияние на окупаемость рекламы?\n",
-        "- Чем могут быть вызваны проблемы окупаемости? Изучите конверсию и удержание с разбивкой по устройствам, странам, рекламным каналам.\n",
-        "\n",
-        "Опишите возможные причины обнаруженных проблем и сформируйте рекомендации для рекламного отдела. При решении этого шага считайте, что вы смотрите данные 1-го ноября 2019 года и что в вашей организации принято считать, что окупаемость должна наступать не позднее, чем через 2 недели после привлечения пользователей."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "cellId": "vx5hnxbqbgab3nb5afb1",
         "id": "jTXVgPl_gkG_"
       },
       "source": [
-        "Используя графики LTV, ROI и CAC, проанализируем окупаемость рекламы. На календаре 1 ноября 2019 года, а в бизнес-плане заложено, что пользователи должны окупаться не позднее чем через две недели после привлечения. Органических пользователей в анализ не включаем, т.к нам нужно оценить эффективность платных каналов."
+        "* Используя графики LTV, ROI и CAC, проанализируем окупаемость рекламы. На календаре 1 ноября 2019 года, а в бизнес-плане заложено, что пользователи должны окупаться не позднее чем через две недели после привлечения. Органических пользователей в анализ не включаем, т.к нам нужно оценить эффективность платных каналов."
       ]
     },
     {
@@ -3890,7 +3795,7 @@
         "id": "z1o6mLtWgkHA"
       },
       "source": [
-        "### Проанализируйте общую окупаемость рекламы"
+        "### Общая окупаемость рекламы"
       ]
     },
     {
@@ -3963,7 +3868,7 @@
         "id": "0sJDynZEgkHB"
       },
       "source": [
-        "### Проанализируйте окупаемость рекламы с разбивкой по устройствам"
+        "### Окупаемость рекламы с разбивкой по устройствам"
       ]
     },
     {
@@ -4026,7 +3931,7 @@
         "id": "HutwweDSgkHD"
       },
       "source": [
-        "### Проанализируйте окупаемость рекламы с разбивкой по странам"
+        "### Окупаемость рекламы с разбивкой по странам"
       ]
     },
     {
@@ -4089,7 +3994,7 @@
         "id": "8roS1A8SgkHF"
       },
       "source": [
-        "### Проанализируйте окупаемость рекламы с разбивкой по рекламным каналам"
+        "### Окупаемость рекламы с разбивкой по рекламным каналам"
       ]
     },
     {
@@ -4152,7 +4057,7 @@
         "id": "UgqXibk1gkHG"
       },
       "source": [
-        "## Проанализируем удержание и конверсию  с разбивкой по устройствам, странам, рекламным каналам"
+        "## Retention и конверсия  с разбивкой по устройствам, странам, рекламным каналам"
       ]
     },
     {
@@ -4530,9 +4435,7 @@
         "id": "OP7HWnv6gkHM"
       },
       "source": [
-        "# Шаг 6. Напишите выводы\n",
-        "- Выделите причины неэффективности привлечения пользователей;\n",
-        "- Сформируйте рекомендации для отдела маркетинга для повышения эффективности."
+        "# 5. Выводы и рекомендации\n"
       ]
     },
     {
@@ -4556,7 +4459,7 @@
         "2. В общем на рекламу было потрачено 105 497. Общая выручка составила 215 963. Т.е доля рекламных расходов составила почти 50 %.\n",
         "3. Рекламный бюджет был распределен между 11 площадками. На 2 площадки tiptop и faceboom пришлось 82% бюджета это 87 196.\n",
         "4. Пользователи привлекались из 4-х стран на долю США пришлось 90 928 - это 86 % бюджета. Из них большая часть пришлась на 2 вышеупомянутых канала.\n",
-        "5. Именно эти 2 канала оказали отрацателное влияние на общий показатель ROI и как следствие на эффективность всей рекламной кампании. На графике динамики ROI пользователей на 14-й день по стране США видно, что только эти 2 канала привлечения находятся ниже уровня окупаемости."
+        "5. Именно эти 2 канала оказали отрицателное влияние на общий показатель ROI и как следствие на эффективность всей рекламной кампании. На графике динамики ROI пользователей на 14-й день по стране США видно, что только эти 2 канала привлечения находятся ниже уровня окупаемости."
       ]
     },
     {
@@ -4624,7 +4527,6 @@
       "toc_window_display": false
     },
     "colab": {
-      "name": "6. product analyst.ipynb",
       "provenance": [],
       "collapsed_sections": []
     }
